--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(Qt5 COMPONENTS
         Widgets
         REQUIRED)
 
-add_executable(Minesweeper main.cpp Source/Window.cpp Source/Window.h Source/DButton.cpp Source/DButton.h)
+add_executable(Minesweeper main.cpp Source/DWindow.cpp Source/DWindow.h Source/DButton.cpp Source/DButton.h Source/GameSettings.cpp Source/GameSettings.h Source/GlobalVars.cpp Source/GlobalVars.h)
 target_link_libraries(Minesweeper
         Qt5::Core
         Qt5::Gui
